--- a/style.css
+++ b/style.css
@@ -4,13 +4,18 @@
     background-size: cover;
     background-position: center;  
 }
+.logo>h2{
+    color: antiquewhite;
+}
 .navigation{
     display: flex;
     justify-content: space-around;
     padding: 20px;
+    /* background-color: green; */
 }
 .navigation > p{
     font-size: 20px;
+    
 }
 .nav{
     margin-top: 5px;
@@ -22,18 +27,15 @@
     color: white;
     list-style: none;
 }
-.right-nav{
-    background-color: rgb(13, 178, 233);
-    color: white;
-    border-radius: 30px;
-    padding: 0px 20px;
-    height: 50px;
-    margin: 10px;
-}
 
 .right-nav>h4{
     margin-top: 16px;
     font-size: 20px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgb(16, 179, 233);
+    color: white;
+    font-size: 18px;
 }
 /* hero */
 
@@ -54,8 +56,25 @@
 .hero > p{
     font-size: 20px;
 }
+.btns{
+    /* margin-bottom: 30px 30px; */
+    display: flex;
+}
 .btn1{
-    border-radius: 10px;
+    border-radius: 25px;
     padding: 13px;
     background-color: rgb(16, 179, 233);
+    color: white;
+    font-size: 18px;
+    border-style: none;
+    margin-right: 15px;
+}
+.btn2{
+    border-radius: 25px;
+    padding: 13px;
+    color: white;
+    font-size: 18px;
+    border-style: none;
+    margin-left: 15px;
+    border: 1px solid white;
 }
