--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 .sectionA{
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('./images/hero.png');
     height: 70vh;
@@ -11,7 +15,10 @@
     display: flex;
     justify-content: space-around;
     padding: 20px;
-    /* background-color: green; */
+    /* overflow: hidden; */
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 .navigation > p{
     font-size: 20px;
@@ -50,15 +57,17 @@
     color: white;
 }
 .hero > h2{
-    font-size: 30px;
+    font-size: 60px;
     font-weight: 0px;
 }
 .hero > p{
     font-size: 20px;
+    margin-top: 20px;
 }
 .btns{
     /* margin-bottom: 30px 30px; */
     display: flex;
+    margin-top: 30px;
 }
 .btn1{
     border-radius: 25px;
@@ -77,4 +86,45 @@
     border-style: none;
     margin-left: 15px;
     border: 1px solid white;
+}
+/* cards */
+.cards{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 13px 0px 10px 0px;
+}
+.card {
+    max-width: 300px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    height: 50vh;
+}
+#left-card{
+    background-color: rgb(13, 186, 244);
+    color: white;
+}
+.left-card-text{
+    color: white;
+    font-size: 18px;
+}
+.card img {
+    /* width: 100%; */
+    height: auto;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+.card-content {
+    padding: 20px;
+}
+.card-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.card-text {
+    font-size: 18px;
+    color: rgb(156, 170, 182);
+
 }
