--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@
 .cards{
     display: flex;
     justify-content: space-around;
-    margin-top: 13px 0px 10px 0px;
+    margin-top: 13px;
+    margin-bottom: 10px;
 }
 .card {
     max-width: 300px;
@@ -124,6 +125,52 @@
     margin-bottom: 10px;
 }
 .card-text {
+    font-size: 18px;
+    color: rgb(156, 170, 182);
+
+}
+
+/* section2 */
+.cards2{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 400px;
+    margin-bottom: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 30px;
+}
+.card2{
+    max-width: 300px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+    overflow: hidden;
+    height: 50vh;
+}
+/* #left-card2{
+    background-color: rgb(13, 186, 244);
+    color: white;
+} */
+.left-card2-text{
+    color: rgb(156, 170, 182);
+    font-size: 18px;
+}
+.card2 img {
+    /* width: 100%; */
+    height: auto;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+.card2-content {
+    padding: 20px;
+}
+.card2-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.card2-text {
     font-size: 18px;
     color: rgb(156, 170, 182);
 
