--- a/style.css
+++ b/style.css
@@ -227,3 +227,40 @@
     justify-content: space-between;
     gap: 10px;
 }
+
+/* section 4 */
+.logos{
+    display: flex;
+    justify-content: space-between;
+    margin: 100px 150px 100px 150px;
+}
+.suscribe{
+    background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 90px;
+    /* margin: 40px; */
+    padding: 20px;
+    margin-bottom: 150px;
+    margin-left: 150px;
+    margin-right: 150px;
+    border-radius: 5px;
+}
+.subscribe-para{
+    color: white;
+    font-size: 30px;
+}
+.input{
+    padding: 15px 50px;
+    border-radius: 5px;
+    border: none;
+}
+.subscribe-btn{
+    padding: 15px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(15, 171, 223);
+    color: white;
+    font-size: 20px;
+}
