--- a/style.css
+++ b/style.css
@@ -457,3 +457,34 @@
     border-radius: 5px;
     border: none;
 }
+
+/* section 8 */
+.section8{
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 130px 50px 130px;
+    background-color: rgb(248, 248, 247);
+}
+.consult{
+    margin-top: 20px;
+    margin-left: 30px;
+}
+.consult>p{
+    color: gray;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.contact-btn{
+    background-color: rgb(13, 176, 230);
+    margin-right: 50px;
+    padding: 1px 50px;
+    border-radius: 7px;
+    margin-bottom: 50px;
+    margin-top: 40px;
+}
+.contact-btn>h2{
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
