--- a/style.css
+++ b/style.css
@@ -224,8 +224,8 @@
 }
 .star{
     display: flex;
-    justify-content: space-between;
-    gap: 10px;
+    /* justify-content: space-between; */
+    /* gap: 10px; */
 }
 
 /* section 4 */
@@ -235,7 +235,7 @@
     margin: 100px 150px 100px 150px;
 }
 .suscribe{
-    background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+    background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #eb64db 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -488,3 +488,19 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+/* footer */
+.footer{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-bottom: 40px;
+}
+.column>p{
+    color: gray;
+    padding: 7px;
+}
+.column>h2{
+    color: rgb(67, 66, 66);
+}
+
