--- a/style.css
+++ b/style.css
@@ -504,3 +504,17 @@
     color: rgb(67, 66, 66);
 }
 
+/* last section */
+.last-section{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    margin-left: 150px;
+    margin-right: 150px;
+}
+.last-section>p{
+    color: rgb(69, 66, 66);
+    font-size: 20px;
+}
+
+
