--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 body{
-    background-color: yellow;
+    background-color: rgb(250, 250, 249);
 }
 
 .container{
@@ -123,18 +123,10 @@ body{
     height: 50vh;
     margin-top: 20px;
 }
-/* .card :hover{
-    background-color: rgb(239, 241, 242);
-    color: rgb(202, 14, 14);
-} */
 #left-card{
     background-color: rgb(13, 186, 244);
     color: white;
 }
-/* #left-card :hover{
-    background-color: white;
-    color: rgb(16, 181, 235);
-} */
 .left-card-text{
     color: white;
     font-size: 18px;
@@ -164,10 +156,6 @@ body{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    /* margin-top: 400px; */
-    /* margin-bottom: 10px; */
-    /* margin-left: 100px; */
-    /* margin-right: 100px; */
     margin-bottom: 30px;
 }
 .card2{
@@ -212,8 +200,6 @@ body{
     gap: 30px;
     flex-wrap: wrap;
     width: 100%;
-    /* margin-left: 150px; */
-    /* margin-right: 150px; */
     margin-bottom: 20px;
 }
 .industry{
@@ -244,8 +230,6 @@ body{
 }
 .card3 img {
     height: auto;
-    margin-left: 50px;
-    margin-top: 20px;
 }
 .card3-content {
     padding: 20px;
@@ -263,7 +247,7 @@ body{
 }
 .star{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: center;
     gap: 10px;
 }
 
@@ -339,11 +323,11 @@ padding: 10px 50px;
     background-color: white;
     width: 280px;
     border: 1px solid rgb(94, 202, 237);
-    /* height: 70vh; */
     margin-top: 32px;
     border-radius: 5px;
     margin-bottom: 20px;
 }
+
 .free-content{
     margin-left: 15px;
 }
@@ -381,7 +365,6 @@ padding: 10px 50px;
     border: none;
     border-radius: 5px;
 }
-
 .standard{
     background-color: rgb(26, 26, 65);
     width: 280px;
@@ -592,45 +575,19 @@ padding: 10px 50px;
     font-size: 20px;
 }
 
-@media (max-width: 768px) {
-    .sectionA {
-
+@media screen and (max-width: 200px) {
+    .btn2{
+        border: 1px solid black;
+        color: black;
     }
-
-    .section2 {
+    .card{
+        margin-top: 300px;
     }
-
-    .section3 {
+    .sectionA{
+        flex-wrap: wrap;
     }
-
-    .section4 {
+    .section6{
+        flex-wrap: wrap;
     }
-
-    .section5 {
-    }
-
-    .section6 {
-    }
-
-    .section7 {
-    }
-
-    .section8 {
-    }
-
-    .footer {
-    }
-
-    .last-section {
-    }
-
-    .navigation {
-    }
-
-    .cards {
-    }
-
-    .cards2 {
-    }
-
-}
+  }
+  
